# metroGen

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  _llm_export.md  alembic.ini  dev.db  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  main.py  package.json  project_source_code.txt  pyproject.toml  requirements.txt  test.html
.c#info/excl/: Поверка манометры 06.2025.xlsm
.c#info/pr_form/: Davlenie.html  DocumentCreatorBase.cs  HTMLCreationResult.cs  Manometr.html  ManometrDocumentCreator.cs  PageManipulationExtensions.cs
.github/workflows/: deploy.yml  promote.yml  staging.yml
app/: .env.example  cli.py  main.py
app/api/: deps.py
app/core/: config.py  logging.py
data/: 71040-18 111-215ТЕ.xlsx  71040-18.xlsx  verification_methods_202510201601.json  СИ не эталон.ods
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
migrations/: env.py
output/: ABC123-б-150125-1(77).html
scripts/: __init__.py  bootstrap_database.py  import_verification_methods.py  run_quality_checks.py
tests/: conftest.py  test_arshin_routes.py  test_arshin_service.py  test_auxiliary_instruments_routes.py  test_cli.py  test_controller_65685_generator.py  test_controller_generator.py  test_excel_utils.py  test_html_renderer.py  test_main.py  test_mappings_methodology.py  test_methodologies_routes.py  test_notification_service.py  test_owners_routes.py  test_paths_utils.py  test_pdf_service.py  test_pressure_generator.py  test_protocol_builder.py  test_protocol_helpers.py  test_protocols_html.py  test_protocols_routes.py  test_registry_ingest.py  test_repository_utils.py  test_security_utils.py  test_signatures.py  test_style.py
(+137 files in other folders)
