[project]
name = "metrologenerator"
version = "0.1.0"
description = "Protocol generator for mkair"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "openpyxl",
  "python-dateutil",
  "pydantic-settings",
  "loguru",
  "python-multipart"
]

# dev-зависимости как optional extras (стандарт PEP 621)
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "pytest-cov"
]
