[project]
name = "metrologenerator"
version = "0.1.0"
description = "Protocol generator for mkair"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "openpyxl",
  "python-dateutil",
  "pydantic-settings",
  "loguru",
  "python-multipart",
  "Jinja2",
  "playwright",
  "python-slugify",
  "ruff>=0.12.12",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "asyncpg",
]

# dev-зависимости как optional extras (стандарт PEP 621)
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "pytest-cov",
  "ruff",
  "black",
  "aiosqlite",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "pytest-cov",
  "ruff",
  "black",
  "aiosqlite",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
# Общие настройки Ruff (линтер + форматтер)
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# Набор правил: базовая чистота + импорт-упорядочивание + обновления синтаксиса
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort (упорядочивание импортов)
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
